--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "wakati-api",
   "scripts": {
     "dev": "wrangler dev",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.16"
+    "@hono/zod-openapi": "^0.18.3",
+    "hono": "^4.6.16",
+    "stoker": "^1.4.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241218.0",
-    "wrangler": "^3.96.0",
     "@antfu/eslint-config": "^3.12.2",
-    "eslint": "^9.17.0"
+    "@cloudflare/workers-types": "^4.20241218.0",
+    "eslint": "^9.17.0",
+    "wrangler": "^3.96.0"
   }
 }
