--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "wakati-api"
 main = "src/index.ts"
 compatibility_date = "2025-01-08"
+assets = { directory = "public" }
 
 # compatibility_flags = [ "nodejs_compat" ]
 
