--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     ],
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "types": [
       "@cloudflare/workers-types/2023-07-01"
     ],
     "strict": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*":["./src/*"]
-    }
+    "skipLibCheck": true
   }
 }
